--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --hot"
   },
-  "author": "Anshu Goyal",
+  "author": "Akash Goyal",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.3",
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
+    "file-loader": "^2.0.0",
     "webpack-cli": "^3.0.2"
   }
 }
