--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Akash Goyal",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "material-ui": "^0.20.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
