--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "material-ui": "^0.20.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-icons": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "webpack": "^4.11.1",
     "webpack-dev-server": "^3.1.4"
