--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.4.0",
     "react-icons": "^3.2.1",
     "react-router-dom": "^4.2.2",
+    "react-select": "^2.1.1",
     "webpack": "^4.11.1",
     "webpack-dev-server": "^3.1.4"
   },
